<?xml version="1.0" encoding="utf-8"?>
<!--
  ~     This file is part of BeeperAlarm app.
  ~
  ~     BeeperAlarm app is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     BeeperAlarm app is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with BeeperAlarm app.  If not, see <https://www.gnu.org/licenses/>.
  -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.prprinc.beeperalarm.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_info"
        android:name="com.prprinc.beeperalarm.ui.info.InfoFragment"
        android:label="@string/menu_info"
        tools:layout="@layout/fragment_info" />
    <fragment
        android:id="@+id/nav_filter_list"
        android:name="com.prprinc.beeperalarm.ui.filterlist.FilterListFragment"
        android:label="@string/menu_filter_list"
        tools:layout="@layout/fragment_filter_list" />
</navigation>